src/pages/ar-ae/v1.18.0/configuration/external-storage.mdx
---
title: "التخزين الخارجي"
metaTitle: "التخزين الخارجي"
metaDescription: "كيفية تغيير وجهة التخزين الافتراضية لتسجيلاتك."
---

تُخزَّن [تسجيلات الجلسات](/configuration/cleanup-storage#recordingstorage) في OpenReplay افتراضيًا على نسختك (instance)، ولكن يمكن تغيير الوجهة إلى أي خدمة تخزين كائنات متوافقة مع S3، مما يتيح قابلية توسّع أكبر وتكاليف نشر أقل.

## تغيير وجهة تخزين التسجيلات

يمكن الاحتفاظ بالتسجيلات في أي وجهة تخزين كائنات طالما كانت متوافقة مع S3، مما يجعل OpenReplay متوافقًا مع جميع خدمات السحابة العامة الرئيسية. فيما يلي خطوات إعداد وجهة مختلفة لتسجيلاتك:

### إنشاء الحاويات (buckets) اللازمة

يجب عليك إنشاء الحاويات (buckets) التالية في خدمة تخزين الكائنات لديك. يمكن أن تكون أسماؤها مختلفة، لكننا سنستخدم المراجع التالية في بقية هذا القسم:
- `openreplay-recordings`: حيث سيتم الاحتفاظ بالتسجيلات
- `openreplay-assets`: حيث سيتم نسخ الأصول (مثل css والخطوط)
- `openreplay-sourcemaps`: لتخزين خرائط المصدر (source maps) (انظر [كيفية رفعها](/installation/upload-sourcemaps))

بمجرد إنشاء الحاوية: 

1. فعّل CORS لكل حاوية من الحاويات المذكورة أعلاه. إذا كنت تستخدم AWS، فسيكون ذلك ضمن 'Permissions > Cross-origin resource sharing (CORS)' باستخدام الإعداد التالي:

```json
[
    {
        "AllowedHeaders": [
            "*"
        ],
        "AllowedMethods": [
            "GET"
        ],
        "AllowedOrigins": [
            "*"
        ],
        "ExposeHeaders": []
    }
]
```

2. فعّل الوصول العام إلى حاوية `openreplay-assets` **فقط**. تحتوي هذه الأخيرة فقط على أوراق الأنماط (stylesheets) والأيقونات والخطوط المطلوبة لإعادة تشغيل الجلسات بشكل صحيح. إذا كنت تستخدم AWS، انتقل أولًا إلى 'Permissions > Block public access (bucket settings)' وأوقفه، ثم اذهب إلى 'Permissions > Bucket policy' واستخدم الإعداد التالي:

```json
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Sid": "AddPerm",
            "Effect": "Allow",
            "Principal": "*",
            "Action": "s3:GetObject",
            "Resource": "arn:aws:s3:::openreplay-assets/*"
        }
    ]
}
```

3. أخيرًا، تأكد من إنشاء مفاتيح الوصول المناسبة **لهذه الحاويات الثلاث فقط** حتى يتمكن الواجهة الخلفية (backend) لـ OpenReplay من الوصول إليها برمجيًا لرفع الملفات. أذونات S3 المطلوبة هي:

```json
"s3:PutObject",
"s3:GetObjectAcl",
"s3:GetObject",
"s3:GetObjectTagging",
"s3:ListBucket",
"s3:PutObjectTagging",
"s3:GetBucketLocation"
```

### تحديث خدمات الواجهة الخلفية (backend)

1. سجّل الدخول إلى نسخة OpenReplay لديك ونفّذ `openreplay -e` لتحديث متغيرات البيئة التالية في قسم `s3`:

| المتغير | الوصف |
|----------|-------------|
| accessKey | مفتاح الوصول الخاص بتخزين الكائنات لديك ([معرّف مفتاح الوصول الخاص بـ IAM](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey) إذا كنت تستخدم AWS، وعلى Google Cloud سيكون [مفتاح HMAC لحساب الخدمة](https://cloud.google.com/storage/docs/authentication/managing-hmackeys)) |
| secretKey | المفتاح السري لتخزين الكائنات لديك |
| endpoint | عنوان URL (الذي يبدأ بـ `https`) لخدمة تخزين الكائنات لديك (أي راجع قائمة [نقاط نهاية S3](https://docs.aws.amazon.com/general/latest/gr/s3.html) إذا كنت تستخدم AWS، وعلى Google Cloud Storage سيكون `https://storage.googleapis.com`) |
| region | المنطقة (إن وجدت) لحاوياتك (أي إذا كنت تستخدم AWS S3، سيكون شيئًا مثل `us-east-1`) |
| assetsBucket | اسم حاوية الأصول (أي `openreplay-assets`)  |
| recordingsBucket | اسم حاوية التسجيلات (أي `openreplay-recordings`) |
| sourcemapsBucket | اسم حاوية خرائط المصدر (أي `openreplay-sourcemaps`) |

2. احفظ واخرج باستخدام `:wq` لكي تدخل التغييرات حيز التنفيذ

من المفترض الآن أن يتم تخزين الجلسات المسجّلة حديثًا واستردادها (عند إعادة تشغيلها) من وجهتك/خدمة تخزين الكائنات الجديدة.

## هل لديك أسئلة؟

إذا واجهت أي مشكلات، يُرجى الانضمام إلى [Slack](https://slack.openreplay.com) الخاص بنا أو زيارة [المنتدى](https://forum.openreplay.com) للحصول على المساعدة من مجتمعنا.
